add memory usage endpoint
